@@ -72,6 +72,7 @@
     <Compile Include="BigEndianBitConverter.cs" />
     <Compile Include="ImagePlugins\DiskCopy42.cs" />
     <Compile Include="Plugins\LisaFS.cs" />
+    <Compile Include="ImagePlugins\TeleDisk.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
